call dict controller init

--- a/webapp/views/dict.html
+++ b/webapp/views/dict.html
@@ -1,4 +1,4 @@
-<div class="content-outer" data-ng-controller="DictController">
+<div class="content-outer" data-ng-controller="DictController" data-ng-init="init()">
         <div class="row page">
             <div class="twelve columns">
                 <aside id="sidebar">
