--- a/webapp/views/viewblog.html
+++ b/webapp/views/viewblog.html
@@ -3,13 +3,13 @@
     	<div id="primary" class="eight columns">
     		<article class="post">
     			<div class="entry-header cf">
-    				 <h1 data-ng-bind="article.Title"></h1>
+    				 <h1 data-ng-bind="info.Title"></h1>
     				 <p class="post-meta">
-    				 	<time class="date" >{{article.CreateTime}}</time>
+    				 	<time class="date" >{{info.CreateTime}}</time>
     				 </p>
     			</div>
     			<div class="post-thumb">
-					<img data-ng-src="{{article.CoverPhoto}}" data-ng-title="{{article.Title}}"  data-ng-alt="{{article.Title}}">
+					<img data-ng-src="{{info.CoverPhoto}}" data-ng-title="{{info.Title}}"  data-ng-alt="{{info.Title}}">
 				</div>
 				<div class="post-content">
 					<div id="htmlcontentdiv"></div>
