--- a/webapp/views/addproduct.html
+++ b/webapp/views/addproduct.html
@@ -6,29 +6,15 @@
                     <fieldset>
                         <legend>Add New Product</legend>
                         <div>
-                            <label for="inputNavName">Navigation Name</label>
-                            <input type="text" size="50" id="inputNavName" name="inputNavName" ng-model="data.NavName" required />
+                            <label for="inputName">Name</label>
+                            <input type="text" size="50" id="inputName" name="inputName" ng-model="data.Name" required />
                         </div>
 
                         <div>
-                            <label for="inputEnName">Product Name</label>
-                            <input type="text" size="50" id="inputEnName" name="inputEnName" ng-model="data.EnName" required />
+                            <label for="inputTitle">Title</label>
+                            <input type="text" size="50" id="inputTitle" name="inputTitle" ng-model="data.Title" required />
                         </div>
 
-                        <div>
-                            <label for="inputCnName">中文名</label>
-                            <input type="text" size="50" id="inputCnName" name="inputCnName" ng-model="data.CnName" required />
-                        </div>
-                        
-                        <div>
-                            <label for="selectStatus">Status</label>
-                            <select id="selectStatus" data-ng-model="data.Status">
-                                <option value="0">Not For Sale</option>
-                                <option value="1">For Sale</option>
-                                <option value="2">On Sale</option>
-                            </select>
-                        </div>
-                        
                         <div>
                             <label for="inputPrice">Price</label>
                             <input type="text" size="50" id="inputPrice" name="inputPrice" ng-model="data.Price" required />
@@ -49,26 +35,25 @@
                             <textarea rows="15" cols="50"  id="inputSpec" name="inputSpec" ng-model="data.Spec" required ></textarea>
                         </div>
 
-
                         <div>
                             <label for="inputTaobaoUrl">Taobao</label>
-                            <input type="text" size="50" id="inputTaobaoUrl" name="inputTaobaoUrl" ng-model="data.taobaourl" />
+                            <input type="text" size="50" id="inputTaobaoUrl" name="inputTaobaoUrl" ng-model="data.tburl" />
                         </div>
-                        <!--
-                        <div class="form-group">
-                            <label for="inputWechatUrl" class="col-xs-2 control-label">微信</label>
-                            <div class="col-xs-10">
-                                <input type="text" class="form-control" id="inputWechatUrl" name="inputWechatUrl" ng-model="data.wechaturl" />
-                            </div>
-                        </div>
-                        -->
                         <div>
                             <label for="inputEbayUrl">Ebay </label>
                             <input type="text" class="form-control" id="inputEbayUrl" name="inputEbayUrl" ng-model="data.ebayurl" />
                         </div>
+                        <div>
+                            <label for="inputWbUrl">Weibo </label>
+                            <input type="text" class="form-control" id="inputWbUrl" name="inputWbUrl" ng-model="data.wburl" />
+                        </div>
+                        <div>
+                            <label for="inputFbUrl">Facebook </label>
+                            <input type="text" class="form-control" id="inputFbUrl" name="inputFbUrl" ng-model="data.fburl" />
+                        </div>
 
                         <div>
-                            <button type="submit" class="btn btn-info" ng-disabled="form.$invalid" data-ng-click="addproduct()">Submit</button>
+                            <button type="submit" class="btn btn-info" ng-disabled="form.$invalid" data-ng-click="add()">Submit</button>
                         </div>
                     </fieldset>
                 </form>
