--- a/webapp/views/products.html
+++ b/webapp/views/products.html
@@ -21,19 +21,20 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div data-ng-repeat="p in products">
-						<div class="two columns">
-							<span>{{getStatusName(p.Status)}}</span>
+						<div class="four columns">
+							<a href="#!/product/{{p.Info.Name}}"><img class="img-responsive"
+								data-ng-src="{{p.Info.CoverPhoto}}"></img></a>
 						</div>
 						<div class="four columns">
-							<a href="#!/product/{{p.NavName}}"><img class="img-responsive"
-								data-ng-src="{{p.CoverPhoto}}"></img></a>
-						</div>
-						<div class="four columns">
-							<a href="#!/product/{{p.NavName}}">{{p.EnName}}</a>
+							<a href="#!/product/{{p.Info.Name}}">{{p.Info.Title}}</a>
 						</div>
 						
 						<div class="two columns">
-							<span>{{p.Price}}</span>
+							<span>{{p.Info.Price}}</span>
+						</div>
+
+						<div class="two columns">
+							<span>{{p.Info.Price}}</span>
 						</div>
 						
 						
