seperate management portal and visitor portal.

--- a/webapp/views/adsense_page.html
+++ b/webapp/views/adsense_page.html
@@ -72,30 +72,13 @@
 						</div>
 					</div>
 					<div id="portfolio-wrapper" class="bgrid-full s-bgrid-full">
-                    <div class="widget widget_search">
-                        <form>
-                            <input class="text-search" type="text" data-ng-model="searchtext">
-                            <input type="submit"
-                                class="submit-search" value="" data-ng-click="query()">
-                        </form>
-                    </div>
-</div>
-
-					<div id="portfolio-wrapper" class="bgrid-full s-bgrid-full">
-                    <div class="columns">
-            <article class="post">
-                <div class="entry-header cf">
-                     <h1 data-ng-bind="fanyi.query"></h1>
-                </div>
-                <div class="post-content">
-                        <span data-ng-hide="fanyi.basic.explains.length>0" data-ng-bind="fanyi.translation[0]"></span>
-                    <div data-ng-repeat="e in fanyi.basic.explains">
-                        <span>{{e}}</span>
-                    </div>
-                </div>
-            </article>
-</div>
-</div>
+						<div class="columns portfolio-item">
+							<div class="item-wrap">
+<!-- featen_right_middle -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-2004843599964911"
+     data-ad-slot="7567641750"></ins> </div></div></div>
 				</div>
 			</aside>
 		</div>
