--- a/webapp/views/viewblog.html
+++ b/webapp/views/viewblog.html
@@ -23,8 +23,8 @@
 						data-ng-repeat="deal in deals">
 						<div class="columns portfolio-item">
 							<div class="item-wrap">
-								<a href="#!/deal/{{deal.NavName}}"> <img
-									alt="{{deal.EnName}}" data-ng-src="{{deal.CoverPhoto}}">
+								<a href="#!/deal/{{deal.Info.Name}}"> <img
+									alt="{{deal.Info.Title}}" data-ng-src="{{deal.CoverPhoto}}">
 									<div class="overlay"></div>
 									<div class="link-icon">
 										<i class="fa fa-link"></i>
@@ -32,9 +32,9 @@
 								</a>
 								<div class="portfolio-item-meta">
 									<h5>
-										<a href="#!/deal/{{deal.NavName}}">{{deal.EnName}}</a>
+										<a href="#!/deal/{{deal.Info.Name}}">{{deal.Info.Title}}</a>
 									</h5>
-									<p><del>${{deal.Price + deal.Discount}}</del>   ${{deal.Price}}</p>
+									<p><del>${{deal.Info.Price + deal.Info.Discount}}</del>   ${{deal.Info.Price}}</p>
 								</div>
 							</div>
 						</div>
