--- a/webapp/views/deal.html
+++ b/webapp/views/deal.html
@@ -23,15 +23,15 @@
                     <ul>
                             <li><b><del>Listing Price: ${{deal.Info.Price + deal.Info.Discount}} </del></b></li>
                             <li><h3>Now:    <span style="color: red">${{deal.Info.Price}}</span></h3></li>
-                        
+
 							<li>
-							<a class="button" target="_blank" data-ng-hide="deal.Info.tburl.length==0" href="{{deal.Info.tburl}}">淘宝</a>
-							<a class="button" target="_blank" data-ng-hide="deal.Info.ebayurl.length==0" href="{{deal.Info.ebayurl}}">ebay</a>
-							<a class="button" target="_blank" data-ng-hide="deal.Info.wburl.length==0" href="{{deal.Info.wburl}}">微博</a>
-							<a class="button" target="_blank" data-ng-hide="deal.Info.fburl.length==0" href="{{deal.Info.fburl}}">facebook</a>
+							<a class="button" target="_blank" data-ng-show="deal.Info.tburl.length>0" href="{{deal.Info.tburl}}">淘宝</a>
+							<a class="button" target="_blank" data-ng-show="deal.Info.ebayurl.length>0" href="{{deal.Info.ebayurl}}">ebay</a>
+							<a class="button" target="_blank" data-ng-show="deal.Info.wburl.length>0" href="{{deal.Info.wburl}}">微博</a>
+							<a class="button" target="_blank" data-ng-show="deal.Info.fburl.length>0" href="{{deal.Info.fburl}}">facebook</a>
 							</li>
                     </ul>
-								
+
 				</div>
 			</div>
 		</div>
