move admin js to seperate dir.

--- a/webapp/views/page.html
+++ b/webapp/views/page.html
@@ -8,7 +8,7 @@
 					<h1>
 						<a href="#/blog/{{article.Id}}">{{article.Info.Title}}</a>
 					</h1>
-					<time class="date" datetime="2014-01-14T11:24">{{article.Info.CreateTime}}</time>
+					<time class="date" datetime="2014-01-14T11:24">{{article.Info.CreateTime | date:'medium'}}</time>
 				</div>
 
 				<div class="post-thumb">
