--- a/webapp/views/signin.html
+++ b/webapp/views/signin.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="SignInController">
+<div data-ng-controller="UsersCtrl">
 	<div id="page-title">
 		<div class="row">
 			<div class="twelve columns centered text-center">
